--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/resume.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/nnguyen_resume.pdf"><span>CV</span></a>
           </li>
 
           
