--- a/publication/measuring-credit-gap/index.html
+++ b/publication/measuring-credit-gap/index.html
@@ -311,9 +311,6 @@
 
 
 <meta property="twitter:card" content="summary_large_image" />
-
-  <meta property="twitter:site" content="@wowchemy" />
-  <meta property="twitter:creator" content="@wowchemy" />
 <meta property="twitter:image" content="https://namnguyen-hub.github.io/publication/measuring-credit-gap/featured.png" />
 <meta property="og:site_name" content="Nam Nguyen" />
 <meta property="og:url" content="https://namnguyen-hub.github.io/publication/measuring-credit-gap/" />
@@ -1197,7 +1194,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
       
     
     <li>
-      <a href="/uploads/resume.pdf" >
+      <a href="/uploads/nnguyen_resume.pdf" >
         <i class="ai ai-cv"></i>
       </a>
     </li>
