--- a/publication/measuring-credit-gap/index.html
+++ b/publication/measuring-credit-gap/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: December 15, 2022 --><html lang="en-us" >
+<!-- Last Published: January 24, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -856,7 +856,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="/uploads/nnguyen_dissertation.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="/uploads/p2-paper.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -891,7 +891,7 @@
   
     
   
-<a class="btn btn-outline-primary btn-page-header" href="/uploads/presentation.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="/uploads/p2-presentation.pdf" target="_blank" rel="noopener">
   Slides
 </a>
 
@@ -1285,7 +1285,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
 
   
   <p class="powered-by copyright-license-text">
-    © 2022 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2023 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
